# palletballet

./: .dockerignore  .gitignore  Dockerfile  PLAN_GPU.md  README.md  pyproject.toml
.github/workflows/: build.yml  ci.yml
data/: friction_table.json  sku_catalog.csv
infra/: .env.example  README.md  docker-compose.yml
pallet_safety/: __init__.py  catalog.py  configurator.py  failures.py  friction.py  mjcf_builder.py  models.py  scenarios.py  solver.py  threshold.py
pallet_safety/gpu/: __init__.py  grid.py
pallet_safety/inputs/: __init__.py  base.py  mock_random.py
pallet_safety/service/: __init__.py  api.py
pallet_safety/viz/: __init__.py  pallet_3d.py  streamlit_app.py
repro/mjwarp-weld-ring/: README.md  repro.py  weld_ring_12item.xml
scripts/: agreement_study.py  batch_study.py  gpu_spike.py  start_dev.py  uat_animation.py  uat_crash.py  uat_cycle3.py  uat_grid_fix.py  uat_loadmaster.py  uat_personas.py  uat_scenarios.py  uat_v2.py
tests/: test_api.py  test_failures.py  test_friction.py  test_inputs_and_configurator.py  test_mjcf_builder.py  test_models.py  test_pallet_3d.py  test_realism.py  test_scenarios.py  test_solver.py  test_stacks.py  test_threshold.py
