[project]
name = "pallet-safety"
version = "0.1.0"
description = "Real-time pallet safety threshold inference for cold-storage conveyor systems"
requires-python = ">=3.12,<3.14"
dependencies = [
    "pydantic>=2.6",
    "mujoco>=3.2",
    "numpy>=1.26",
    "scipy>=1.12",
    "fastapi>=0.110",
    "uvicorn[standard]>=0.27",
    "streamlit>=1.32",
    "plotly>=5.20",
    "pandas>=2.2",
    "faker>=24.0",
    "requests>=2.31",
]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "hypothesis>=6.100",
    "httpx>=0.27",
    "ruff>=0.4",
    "playwright>=1.58.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["pallet_safety"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra -q"

[tool.ruff]
line-length = 100
target-version = "py312"
